fix[dashboard,documents] correccion en endpoint de documents

--- a/front/static/css/dashboard.css
+++ b/front/static/css/dashboard.css
@@ -161,3 +161,16 @@ li {
     max-height: 400px;
     overflow-y: auto;
 }
+
+.seguimiento-list a {
+    text-decoration: none;
+    color: #3498db;
+}
+
+.seguimiento-list a:hover {
+    color: #27ae60;
+}
+
+.seguimiento-item a {
+    color: #34495e;
+}
