--- a/front/templates/dashboard.html
+++ b/front/templates/dashboard.html
@@ -72,7 +72,7 @@
                         <div class="seguimientos-container">
                             {% for seg in doc.seguimientos %}
                                 <div class="seguimiento-item">
-                                    <a href="/document/{{ doc.doc_number }}/{{ seg.numero }}">
+                                    <a href="/document/{{ doc.doc_number }}/{{ seg.id }}">
                                         Seguimiento {{ seg.numero }}
                                         <span class="status-badge {{ 'enviado' if seg.enviado else 'pendiente' }}">
                                             {{ 'Registrado' if seg.enviado else 'Pendiente' }}
