--- a/front/templates/document.html
+++ b/front/templates/document.html
@@ -17,7 +17,7 @@
             <h2>Seguimiento {{ seguimiento.numero }}</h2>
 
             <!-- Formulario principal para guardar todos los datos -->
-            <form id="form-seguimiento-{{ seguimiento.numero }}" action="/save-seguimiento/{{ doc_number }}_{{ doc_adviser }}/seguimiento_{{ seguimiento.numero }}" method="post">
+            <form id="form-seguimiento-{{ seguimiento.numero }}" action="/save-seguimiento/{{ folder }}/{{ seguimiento.id }}" method="post">
                 <!-- Dimensiones a Intervenir -->
                 <div class="filter-group">
                     <h3>Dimensiones a Intervenir</h3>
@@ -127,7 +127,10 @@
                         <img src="/image/{{ doc_number }}/{{ seguimiento.numero }}/{{ img }}" alt="Imagen del seguimiento">
                         {% endfor %}
                     </div>
-                    
+                    <form action="/upload-file/{{ folder }}/{{ seguimiento.numero }}" method="post" enctype="multipart/form-data">
+                        <input type="file" name="files" multiple>
+                        <button type="submit" class="btn btn-primary">Subir imágenes</button>
+                    </form>
                 </div>
 
                 <!-- Botón para guardar el seguimiento -->
