[Update] subida de imagenes a las carpetas

--- a/front/templates/dashboard.html
+++ b/front/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="/static/css/dashboard.css">
+    <!-- <link rel="stylesheet" href="/static/css/dashboard.css"> -->
     <style>
         .status-badge {
             display: inline-block;
