fix[control_image, index] correxion en carga de imagenes desde el servidor

--- a/front/static/css/index.css
+++ b/front/static/css/index.css
@@ -151,6 +151,7 @@ body {
 }
 
 .form-container {
+  display: none;
   background: rgba(255, 255, 255, 0.95);
   border-radius: 20px;
   padding: 30px;
