--- a/front/templates/login.html
+++ b/front/templates/login.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/static/img/faviconEsumer.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/seguimientos/static/img/faviconEsumer.png" type="image/x-icon">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" href="/seguimientos/static/css/login.css">
 </head>
 
 <body>
 
     <div class="login-container">
         <div class="login-section-logos">
-            <img src="/static/img/LogoEsumer.webp" alt="Logo" class="logo-login">
-            <img src="/static/img/logoCreeSiendo.png" alt="Logotipo CreeSiendo" class="logo-creesiendo">
+            <img src="/seguimientos/static/img/LogoEsumer.webp" alt="Logo" class="logo-login">
+            <img src="/seguimientos/static/img/logoCreeSiendo.png" alt="Logotipo CreeSiendo" class="logo-creesiendo">
         </div>
 
         <h2 class="login-title">Seguimiento CreeSiendo</h2>
@@ -43,7 +43,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/static/js/login.js"></script>
+    <script src="/seguimientos/static/js/login.js"></script>
 </body>
 
 </html>
