--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/static/img/faviconEsumer.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/seguimientos/static/img/faviconEsumer.png" type="image/x-icon">
   <title>Sistema de Registro de Acompañamientos</title>
-  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/seguimientos/static/css/index.css">
 </head>
 
 <body>
@@ -15,10 +15,10 @@
     <div class="header">
       <div class="logo-container">
         <div class="logo-section1">
-          <img src="/static/img/LogoEsumer.webp" alt="Logotipo de universidad esumer" class="">
+          <img src="/seguimientos/static/img/LogoEsumer.webp" alt="Logotipo de universidad esumer" class="">
         </div>
         <div class="logo-section2">
-          <img src="/static/img/logoCreeSiendo.png" alt="Logotipo creesiendo" class="">
+          <img src="/seguimientos/static/img/logoCreeSiendo.png" alt="Logotipo creesiendo" class="">
         </div>
         </div>
       <div class="header-title">
@@ -49,7 +49,7 @@
               </div>
               {% if texto_estado == "Completado" %}
               <div class="follow-up-files">
-                <span class="icon-seguimiento" id="generarPDF" onclick="Download_pdf('{{ familia }}', '{{ entrevistador }}','{{ seg.numero }}')"><img src="/static/img/icons/pdf.png" alt="Icono de archivos pdf"></span>
+                <span class="icon-seguimiento" id="generarPDF" onclick="Download_pdf('{{ familia }}', '{{ entrevistador }}','{{ seg.numero }}')"><img src="/seguimientos/static/img/icons/pdf.png" alt="Icono de archivos pdf"></span>
               </div>
               {% endif %}
             </div>
@@ -60,7 +60,7 @@
         {% endfor %}
 
         <button class="add-button" onclick="createNewFamily()">
-          <img src="/static/img/icons/circulo-plus.png" alt="icono agregar mas"> Crear Nueva Familia
+          <img src="/seguimientos/static/img/icons/circulo-plus.png" alt="icono agregar mas"> Crear Nueva Familia
         </button>
       </div>
 
@@ -262,8 +262,8 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/static/js/control_images.js"></script>
-  <script src="/static/js/index.js"></script>
+  <script src="/seguimientos/static/js/control_images.js"></script>
+  <script src="/seguimientos/static/js/index.js"></script>
 </body>
 
 </html>
