fix[login.html]: carga de icono del ojo

--- a/front/templates/login.html
+++ b/front/templates/login.html
@@ -30,7 +30,7 @@
             <div class="input-group">
                 <input type="password" id="password" class="input-field" required>
                 <label for="password" class="input-label">Contraseña</label>
-                <button type="button" class="password-toggle" id="togglePassword"><img src="/static/img/icons/ojo.png" alt="Icono ojo abierto"></button>
+                <button type="button" class="password-toggle" id="togglePassword"><img src="/seguimientos/static/img/icons/ojo.png" alt="Icono ojo abierto"></button>
                 <!-- <div class="validation-message" id="passwordError"></div>
                 <div class="success-message" id="passwordSuccess"></div> -->
             </div>
