feat[index.css index.html dashboard.py]: Ajustes en el back para mostrar el apellido de la familiar en el botón

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -37,7 +37,7 @@
         <div class="family-section">
           <div class="family-content">
             <div class="family-id" onclick="toggleFollowUps('{{ familia }}', '{{ entrevistador }}')">
-              📋 {{ doc.doc_number }}
+              📋 {{ doc.doc_number }} - {{ doc.apellido }}
             </div>
             {% if user_role == 'superadmin' %}
             <div class="family-delete">
